USAGOV-1524-Widening-the-site-parent-branch: Fix alignment

--- a/web/themes/custom/usagov/sass/_homepage.scss
+++ b/web/themes/custom/usagov/sass/_homepage.scss
@@ -208,7 +208,7 @@
   margin-right: 5vw;
   margin-top: 35px;
   max-width: 400px;
-  padding: 30px 48px 22px;
+  padding: 30px 50px 22px;
 
   h2,
   a {
@@ -433,12 +433,12 @@
 
   /* Life Events */
   .life-events-intro {
-    padding-left: 48px;
+    padding-left: 50px;
   }
 
   .all-topics-header h2 {
     margin: 65px 5vw 0;
-    padding-left: 48px;
+    padding-left: 50px;
   }
 
 }
